minimal-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minimal-deployment
  labels:
    app: minimal-app
spec:
  selector:
    matchLabels:
      app: minimal-app
  replicas: 3
  template:
    metadata:
      labels:
        app: minimal-app
    spec:
      containers:
      - name: minimal-app
        image: "mmorato/trip_interface:latest"
