minimal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minimal-service
spec:
  type: NodePort
  selector:
    app: minimal-app
  ports:
  - protocol: TCP
    port: 60000
    targetPort: 5000
