placila-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: placila-deployment
  labels:
    app: placila
spec:
  replicas: 3
  selector:
    matchLabels:
      app: placila
  template:
    metadata:
      labels:
        app: placila
    spec:
      containers:
        - image: tp7220/placila:latest
          name: placila
---

apiVersion: v1
kind: Service
metadata:
  name: placila-service
spec:
  type: NodePort
  ports:
  - port: 50000
    protocol: TCP
    targetPort: 5002
  selector:
    app: placila
