uporabniki-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uporabniki-deployment
  labels:
    app: uporabniki
spec:
  replicas: 3
  selector:
    matchLabels:
      app: uporabniki
  template:
    metadata:
      labels:
        app: uporabniki
    spec:
      containers:
        - image: tp7220/uporabniki:latest
          name: uporabniki
---

apiVersion: v1
kind: Service
metadata:
  name: uporabniki-service
spec:
  type: NodePort
  ports:
  - port: 40000
    protocol: TCP
    targetPort: 5003
  selector:
    app: uporabniki
