ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moj-ingress
  annotations:
    # If the class annotation is not specified it defaults to "gce".
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend-service
            port:
              number: 30000
      - path: /narocniki/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: uporabniki-service
            port:
              number: 40000
      - path: /narocniki
        pathType: ImplementationSpecific
        backend:
          service:
            name: uporabniki-service
            port:
              number: 40000

      - path: /placila
        pathType: ImplementationSpecific
        backend:
          service:
            name: placila-service
            port:
              number: 50000
      - path: /placila/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: placila-service
            port:
              number: 50000
      - path: /ponujeni_prevozi
        pathType: ImplementationSpecific
        backend:
          service:
            name: vozniki-service
            port:
              number: 41000
      - path: /ponujeni_prevozi/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: vozniki-service
            port:
              number: 41000
